fix description spacing

--- a/scss/main-style.scss
+++ b/scss/main-style.scss
@@ -577,7 +577,7 @@ ul{
     .action-buttons {
       position: absolute;
       right: 54px;
-      margin-top: -12px;
+      margin-top: -10px;
       .btn {width: 140px;}
       .explain{
         font-weight: bold;
